--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>it115-Web-Page Gr2</title>
 </head>
 <body>
-  <h1>This is my gh web page</h1>  
+  <h1>This is my it115-Web-Page</h1>  
+<P>2020 up to 2024 movie reviews or information for the latest review from reliable platforms like Rotten Tomatoes, IMDb, or Metacritic for the most up-to-date and accurate information on movies during the mentioned period</P>
 </body>
 </html>
