--- a/index.html
+++ b/index.html
@@ -1,12 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>it115-Web-Page Gr2</title>
-</head>
-<body>
-  <h1>This is my it115-Web-Page</h1>  
-<P>2020 up to 2024 movie reviews or information for the latest review from reliable platforms like Rotten Tomatoes, IMDb, or Metacritic for the most up-to-date and accurate information on movies during the mentioned period</P>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" media="screen" href="styles/css/stylesheet.css" />
+  <link rel="stylesheet" media="screen" href="styles/css/stylesheet2.css" />
+
+    <title>Seattle Blockbuster</title>
+  </head>
+  <body>
+
+    <header class="north">
+      <div class="container is-fullhd">
+      <div class="branding">
+      <a href="/">Seattle Blockbuster Home</a>
+      <form class="header-site-search" action="/search" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" autocomplete="off" /><div class="field has-addons">
+      <div class="control">
+      <input type="text" name="q" id="q" class="input search-input" placeholder="Search movies and more..." />
+      </div>
+      <div class="control">
+      <input class="search-button" title="Search" type="submit" value="">
+      </div>
+      </div>
+      </form></div>
+      <div aria-label="navigation" class="navbar is-transparent" role="navigation">
+      <div class="navbar-brand">
+      <a class="navbar-item" href="/"><img width="262" alt="Roger Ebert Home" class="navbar-logo" src=".svg" /></a>
+      <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="mainNavigation" role="button">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      </a>
+      </div>
+      <div class="navbar-menu" id="mainNavigation">
+      <div class="navbar-start">
+      <h4>
+      <a title="Movie Reviews" class="navbar-item" href="/reviews">
+      Movie Reviews
+      </a></h4>
+      <h4>
+      <a title="TV/Streaming" class="navbar-item" href="/streaming">
+      TV/Streaming
+      </a></h4>
+      <h4>
+      <a title="Interviews" class="navbar-item" href="/interviews">
+      Interviews
+      </a></h4>
+      <h4>
+      <a title="Collections" class="navbar-item" href="/collections">
+      Collections
+      </a></h4>
+      <h4>
+      <a title="Great Movies" class="navbar-item" href=""><img alt="" title="" class="" src="" />
+      Great Movies
+      </a></h4>
+      <h4>
+      <a title="Chaz&#39;s Journal" class="navbar-item" href="https://www.rogerebert.com/chazs-blog">
+      Chaz&#39;s Journal
+      </a></h4>
+      <h4>
+      <a title="Contributors" class="navbar-item" href="https://www.rogerebert.com/contributors">
+      Contributors
+      </a></h4>
+      </div>
+      <div class="navbar-end">
+      <div class="navbar-item">
+        <form class="header-site-search--mobile" action="https://www.google.com/cse" accept-charset="UTF-8" method="get">
+          <input type="hidden" name="cx" value="53a58cfe2358642a2">
+          <input type="hidden" name="ie" value="UTF-8">
+          <div class="field has-addons">
+            <script async src="https://cse.google.com/cse.js?cx=53a58cfe2358642a2"></script>
+            <div class="gcse-search"></div>
+            <div class="control">
+              <input type="submit" class="button is-primary" value="Search">
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+
+    </div>
+
+      </div>
+      </div>
+      </div>
+      <section class="page-content--ad-block column is-12 is-paddingless">
+      <div class="advertisement">
+      <div class="advertisement--container">
+      <div class="AdvallyTag" data-autosize="" data-slot="/29848019/ROS_TOP_LEADERBOARD" id="ROS_TOP_LEADERBOARD"></div>
+      </div>
+      </div>
+      </section>
+
+      </div>
+      </header>
+
+    <article class="main-content" id="wrapper">
+
+      <div>
+      <h1>New Movie Reviews</h1><br>
+
+      <p>
+<a><img src="images/Clarenfreud.jpg" alt="Clarenfreud" class="review-img" /> </a>
+        Winter finally arrived in Chicago recently, and instead of watching the meteorologists tell us how many inches of thunder snow we would get, I decided to partake in one of my favorite activities, going to the movies. I am fortunate to see lots of films in advance because of my line of work. However, from time to time, like the average movie-goer, I delight in looking at the listings to choose a movie. Should I go see "Origin," once again, the brilliant new film by Ava DuVernay (read Robert Daniels' four-star review here), or should I wait until the newspaper is delivered to see what else is playing? It was too early in the morning for my newspaper (yes, I still subscribe to newspapers and love reading them while turning the pages), so I went online to see the listings at my local theater.
+      </p>
+
+      <div class="main-container" >
+        <div class="movie-container">
+        <img src="https://s3.amazonaws.com/static.rogerebert.com/uploads/movie/movie_poster/fighter-2024/widget_Fighter_Poster.jpg" />
+          <h2>Fighter</h2>
+    <p><strong>Simon Abrams </strong></p>
+          <p>
+            Corrum volorit iandae nimaxim cum restia volor reicid ut et etur
+            sunt arum rendae pla endis re ea erum, qui doluptae.
+          </p>
+          <button class="read-btn">read more</button>
+        </div>
+        <div class="movie-container" class="review-stack--rating">
+          <img src="https://s3.amazonaws.com/static.rogerebert.com/uploads/movie/movie_poster/argylle-2024/widget_argylle_ver2.jpg" />
+          <h2>Argylle</h2>
+    <p><strong></strong></p>
+          <p>
+            Robert Daniels
+          </p>
+
+
+          <button class="read-btn">read more</button>
+        </div>
+        <div class="movie-container">
+        <img src="https://s3.amazonaws.com/static.rogerebert.com/uploads/movie/movie_poster/american-star-2024/widget_AmericanStar_Web_Domestic.jpg" />
+          <h2>American Star</h2>
+    <p><strong>Matt Zoller Seitz </strong></p>
+          <p>
+            Corrum volorit iandae nimaxim cum restia volor reicid ut et etur
+            sunt arum rendae pla endis re ea erum, qui doluptae.
+          </p>
+          <button class="read-btn">read more</button>
+        </div>
+
+      </div>
+
+      <div class="large-btn"><a href="catalogue.html">See more movie reviews</a></div>
+    </article>
+    <footer>
+
+
+      <p>
+        <a href="index.html">Home</a> /
+        <a href="catalogue.html">MOVIE REVIEWS</a>
+        /
+        <a href="form.html">Contact</a>
+      </p>
+      <p>
+      <a>  © 2024  Seattle Blockbuster, LLC | Seattle, WA</a>
+      </p>
+    </footer>
+
+    <!-- BEGIN Google Custom Search Tag -->
+    <script>
+      (function() {
+        var cx = '004943367334924041372:turuh-9ckxm';
+        var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
+        gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+            '//www.google.com/cse/cse.js?cx=' + cx;
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
+      })();
+    </script>
+    <!-- END Google Custom Search Tag -->
+
+  </body>
+
 </html>
