--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <title>it115-Web-Page Gr2</title>
 </head>
 <body>
-  <h1>This is my it115-Web-Page</h1>  
-<P>2020 up to 2024 movie reviews or information for the latest review from reliable platforms like Rotten Tomatoes, IMDb, or Metacritic for the most up-to-date and accurate information on movies during the mentioned period</P>
+  <h1>This is my it115-Web-Page</h1> 
+  <P>2020 up to 2024 movie reviews or information for the latest review from reliable platforms like Rotten Tomatoes, IMDb, or Metacritic for the most up-to-date and accurate information on movies during the mentioned period in a year 2022</P><p>A young viking prince os on a quest to avenge hos father's murder.</p><p>Rated 7.0</p>
+<h1>The Northman</h1>
+<video width="854" height="480" controls>
+    <source src="TheNorthman.mp4" type="video/mp4">
+    
+  Your browser does not support the video tag.
+
+  </video>
+  <P>2020 up to 2024 movie reviews or information for the latest review from reliable platforms like Rotten Tomatoes, IMDb, or Metacritic for the most up-to-date and accurate information on movies during the mentioned period in a year 2023</P><p>Barbie and ken are having the time of their lives in the colorful and seemingly perfect world of Barbie Land.However, when they get a chance to go to the real world, they soon discover joys and perils of living among humans</p><p>Rated 6.9</p>
+  <h1>Barbie Official Trailer</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/sz5O4too0ss?si=8dUZevoH1qPRZ6Sd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+  <P>2020 up to 2024 movie reviews or information for the latest review from reliable platforms like Rotten Tomatoes, IMDb, or Metacritic for the most up-to-date and accurate information on movies during the mentioned period in a year 2021</P><p>A noble family becomes embrolled in a war for control over the galaxy's most valuable asset while its heir becomes troubled by visions of a dark future.</p><p>Rated 8.0</p>
+  <h1>Dune official Trailer</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/n9xhJrPXop4?si=NbNdB1-7SytzDy8m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+  <P>2020 up to 2024 movie reviews or information for the latest review from reliable platforms like Rotten Tomatoes, IMDb, or Metacritic for the most up-to-date and accurate information on movies during the mentioned period in a year 2020</P><p>A man refuses all assistance from his daughter as he ages.</p><p>Rated 8.2</p>
+  <h1>The Father</h1>
 </body>
 </html>
