--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" media="screen" href="styles/css/stylesheet.css" />
-  <link rel="stylesheet" media="screen" href="styles/css/stylesheet2.css" />
-
+    <link rel="stylesheet" href="styles/css/style.css" />
+    <link rel="stylesheet" href="styles/css/stylesheet.css" />
+    <link rel="stylesheet" href="styles/css/styel1.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Seattle Blockbuster</title>
   </head>
   <body>
-
     <header class="north">
+
       <div class="container is-fullhd">
-      <div class="branding">
-      <a href="/">Seattle Blockbuster Home</a>
-      <form class="header-site-search" action="/search" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" autocomplete="off" /><div class="field has-addons">
-      <div class="control">
-      <input type="text" name="q" id="q" class="input search-input" placeholder="Search movies and more..." />
+        <div class="branding">
+          <a href="index.html">Seattle Blockbuster Home</a>
+          <form class="header-site-search" action="https://www.rogerebert.com/search" accept-charset="UTF-8" method="get">
+    <input name="utf8" type="hidden" value=" " autocomplete="off" />
+    <div class="field has-addons">
+        <div class="control">
+            <input type="text" name="q" id="q" class="input search-input" placeholder="Search movies and more..." />
+        </div>
+        <div class="control">
+            <input class="search-button" title="Search" type="submit" value="Search">
+        </div>
+    </div>
+</form>
+
       </div>
-      <div class="control">
-      <input class="search-button" title="Search" type="submit" value="">
-      </div>
-      </div>
-      </form></div>
       <div aria-label="navigation" class="navbar is-transparent" role="navigation">
       <div class="navbar-brand">
       <a class="navbar-item" href="/"><img width="262" alt="Roger Ebert Home" class="navbar-logo" src=".svg" /></a>
@@ -37,23 +41,23 @@
       <div class="navbar-menu" id="mainNavigation">
       <div class="navbar-start">
       <h4>
-      <a title="Movie Reviews" class="navbar-item" href="/reviews">
+      <a title="Movie Reviews" class="navbar-item" href="https://www.rogerebert.com/reviews">
       Movie Reviews
       </a></h4>
       <h4>
-      <a title="TV/Streaming" class="navbar-item" href="/streaming">
+      <a title="TV/Streaming" class="navbar-item" href="https://www.rogerebert.com/streaming">
       TV/Streaming
       </a></h4>
       <h4>
-      <a title="Interviews" class="navbar-item" href="/interviews">
+      <a title="Interviews" class="navbar-item" href="https://www.rogerebert.com/interviews">
       Interviews
       </a></h4>
       <h4>
-      <a title="Collections" class="navbar-item" href="/collections">
+      <a title="Collections" class="navbar-item" href="https://www.rogerebert.com/collections">
       Collections
       </a></h4>
       <h4>
-      <a title="Great Movies" class="navbar-item" href=""><img alt="" title="" class="" src="" />
+      <a title="Great Movies" class="navbar-item" href="https://www.rogerebert.com/great-movies">
       Great Movies
       </a></h4>
       <h4>
@@ -80,10 +84,7 @@
         </form>
       </div>
     </div>
-
-
     </div>
-
       </div>
       </div>
       </div>
@@ -94,83 +95,54 @@
       </div>
       </div>
       </section>
-
       </div>
       </header>
-
     <article class="main-content" id="wrapper">
-
       <div>
-      <h1>New Movie Reviews</h1><br>
-
-      <p>
-<a><img src="images/Clarenfreud.jpg" alt="Clarenfreud" class="review-img" /> </a>
-        Winter finally arrived in Chicago recently, and instead of watching the meteorologists tell us how many inches of thunder snow we would get, I decided to partake in one of my favorite activities, going to the movies. I am fortunate to see lots of films in advance because of my line of work. However, from time to time, like the average movie-goer, I delight in looking at the listings to choose a movie. Should I go see "Origin," once again, the brilliant new film by Ava DuVernay (read Robert Daniels' four-star review here), or should I wait until the newspaper is delivered to see what else is playing? It was too early in the morning for my newspaper (yes, I still subscribe to newspapers and love reading them while turning the pages), so I went online to see the listings at my local theater.
-      </p>
-
+      <h2>New Movie Reviews</h2><br>
+      <p style="text-align: justify;">
+    <a><img src="images/clarenfreud.jpg" alt="Clarenfreud" class="review-img" /> </a>
+  Winter finally arrived in Chicago recently, and instead of watching the meteorologists tell us how many inches of thunder snow we would get, I decided to partake in one of my favorite activities, going to the movies. I am fortunate to see lots of films in advance because of my line of work. However, from time to time, like the average movie-goer, I  delight in looking at the listings to choose a movie. Should I go see "Origin," once again, the brilliant new film by Ava DuVernay (read Robert Daniels' four-star review here), or should I wait until the newspaper is delivered to see what else is playing? It was too early in the morning for my newspaper (yes, I still subscribe to newspapers and love reading them while turning the pages), so I went online to see the listings at my local theater.Two movies caught my eye and they were listed as being shown back-to-back: "The Book of Clarence," at 10am, and "Freud's Last Session"
+    <strong><a href="https://www.rogerebert.com/chazs-blog/at-the-movies-book-of-clarence">Read more </a></strong>
+</p>
       <div class="main-container" >
         <div class="movie-container">
         <img src="https://s3.amazonaws.com/static.rogerebert.com/uploads/movie/movie_poster/fighter-2024/widget_Fighter_Poster.jpg" />
-          <h2>Fighter</h2>
-    <p><strong>Simon Abrams </strong></p>
-          <p>
-            Corrum volorit iandae nimaxim cum restia volor reicid ut et etur
-            sunt arum rendae pla endis re ea erum, qui doluptae.
-          </p>
-          <button class="read-btn">read more</button>
-        </div>
-        <div class="movie-container" class="review-stack--rating">
+        <h2>Fighter</h2>
+        <p><strong>Simon Abrams</strong></p>
+        <p>Politics simultaneously are and aren’t the thing in “Fighter,” a Bollywood military drama that takes heavy inspiration from
+        </p>
+        <a href="https://www.rogerebert.com/reviews/fighter-movie-review-2024" class="read-btn">Read more</a>
+    </div>
+        <div class="movie-container" >
           <img src="https://s3.amazonaws.com/static.rogerebert.com/uploads/movie/movie_poster/argylle-2024/widget_argylle_ver2.jpg" />
           <h2>Argylle</h2>
-    <p><strong></strong></p>
-          <p>
-            Robert Daniels
+    <p><strong>Robert Daniels</strong></p>
+          <p>“Argylle,” the stumbling, overcooked action flick from director Matthew Vaughn, begins with a kind of joke.
           </p>
-
-
-          <button class="read-btn">read more</button>
+            <a href="https://www.rogerebert.com/reviews/argylle-film-review-2024" class="read-btn">Read more</a>
         </div>
         <div class="movie-container">
-        <img src="https://s3.amazonaws.com/static.rogerebert.com/uploads/movie/movie_poster/american-star-2024/widget_AmericanStar_Web_Domestic.jpg" />
-          <h2>American Star</h2>
-    <p><strong>Matt Zoller Seitz </strong></p>
-          <p>
-            Corrum volorit iandae nimaxim cum restia volor reicid ut et etur
-            sunt arum rendae pla endis re ea erum, qui doluptae.
-          </p>
-          <button class="read-btn">read more</button>
+          <img src="https://s3.amazonaws.com/static.rogerebert.com/uploads/movie/movie_poster/american-star-2024/widget_AmericanStar_Web_Domestic.jpg" />
+           <h2>American Star</h2>
+     <p><strong>Matt Zoller Seitz </strong></p>
+           <p>"American Star" is an art house variant of the familiar story of an old hitman facing his mortality while
+           </p><a href="https://www.rogerebert.com/reviews/american-star-film-review-2024" class="read-btn">Read more</a>
         </div>
-
       </div>
-
-      <div class="large-btn"><a href="catalogue.html">See more movie reviews</a></div>
+      <div class="large-btn"><a href="https://www.rogerebert.com/reviews">See more movie reviews</a></div>
     </article>
     <footer>
-
-
       <p>
         <a href="index.html">Home</a> /
-        <a href="catalogue.html">MOVIE REVIEWS</a>
+        <a href="https://www.rogerebert.com/reviews">MOVIE REVIEWS</a>
         /
         <a href="form.html">Contact</a>
       </p>
       <p>
-      <a>  © 2024  Seattle Blockbuster, LLC | Seattle, WA</a>
+      <a> Seattle Blockbuster, LLC © Copyright 2024   | Seattle, WA</a>
       </p>
     </footer>
-
-    <!-- BEGIN Google Custom Search Tag -->
-    <script>
-      (function() {
-        var cx = '004943367334924041372:turuh-9ckxm';
-        var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
-        gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-            '//www.google.com/cse/cse.js?cx=' + cx;
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
-      })();
-    </script>
-    <!-- END Google Custom Search Tag -->
-
   </body>
 
 </html>
