--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div aria-label="navigation" class="navbar is-transparent" role="navigation">
       <div class="navbar-brand">
-      <a class="navbar-item" href="/"><img width="262" alt="Roger Ebert Home" class="navbar-logo" src=".svg" /></a>
+      <a class="navbar-item" href="index.html"></a>
       <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="mainNavigation" role="button">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
