--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>it115-Web-Page Gr2</title>
+    <title>Seattle Blockbuster</title>
 </head>
 <body>
   <h1>This is my it115-Web-Page</h1> 
